# forma-o-python-backend-developer

01 - Explorando Banco de Dados Relacionais com Python DB API/dbapi/: meu_banco.sqlite  util.py
01 - Explorando Banco de Dados Relacionais com Python DB API/dbapi_project/: pyproject.toml
01 - Explorando Banco de Dados Relacionais com Python DB API/main/: app.py  pyproject.toml
02 -Explorando Banco de Dados Relacionais com Python DB API/dbapi/: dbapi.py
02 -Explorando Banco de Dados Relacionais com Python DB API/python-db-api/: 01_dbapi.py  meu_banco.db
03 - Desafios de código/: converter_celsius_para_fahrenheit.py  extrair_domínios.py  tranformar_datas.py
03 - Introdução a Aplicações Rest/: 3c85b94e-e7ab-4a00-9c11-da3ec62fa81d.pptx
04 - Desenvolvimento de APIs com Flask/: Desenvolvimento de APIs com Flask.pptx
04 - Desenvolvimento de APIs com Flask/dio_bank/: pyproject.toml
04 - Desenvolvimento de APIs com Flask/dio_bank/src/: main.py  pyproject.toml
04 - Desenvolvimento de APIs com Flask/dio_bank_2/src/: app.py  db.py
formacao-python-backend-developer/02 -Explorando Banco de Dados Relacionais com Python DB API/python-db-api/:  01_conexao.py
